--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -5,8 +5,8 @@
   --fb-color-white: #eee;
   --fb-color-green-1: #2c7051;
   --fb-color-green-2: #1b4633;
-  --fb-color-text-1: #ddd;
-  --fb-color-text-2: #999;
+  --fb-color-text-1: #353841;
+  --fb-color-text-2: #55565b;
 
   /* Font-sizes */
   --fb-font-size-title: 28px;
@@ -21,6 +21,6 @@
   --fb-padding-3: 20px;
 
   /* Sizes */
-  --fb-size-goal-button-border-width: 2px;
-  --fb-size-goal-button-shadow: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.6));
+  --fb-size-button-border-width: 2px;
+  --fb-size-button-shadow: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.6));
 }
