--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -23,4 +23,5 @@
   /* Sizes */
   --fb-size-button-border-width: 2px;
   --fb-size-button-shadow: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.6));
+  --fb-size-league-select-height: 32px;
 }
