style: update fb-color-green vars

--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -3,8 +3,8 @@
   --fb-color-black-1: #000;
   --fb-color-black-2: #111;
   --fb-color-white: #eee;
-  --fb-color-green-1: #2c7051;
-  --fb-color-green-2: #1b4633;
+  --fb-color-green-1: #2e7d32;
+  --fb-color-green-2: #2c7051;
   --fb-color-text-1: #353841;
   --fb-color-text-2: #55565b;
 
