build: update --fb-color-text-2

--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -7,7 +7,7 @@
   --fb-color-green-2: #2c7051;
   --fb-color-green-1-light: #2e7d321a;
   --fb-color-text-1: #353841;
-  --fb-color-text-2: #55565b;
+  --fb-color-text-2: #00000061;
 
   /* Font-sizes */
   --fb-font-size-title: 28px;
