--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -36,3 +36,18 @@ $futbet-theme: mat.define-light-theme(
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include mat.all-component-themes($futbet-theme);
+
+body {
+  --mat-standard-button-toggle-state-layer-color: var(--fb-color-green-1);
+  --mat-standard-button-toggle-selected-state-background-color: var(
+    --fb-color-green-1
+  );
+  --mat-standard-button-toggle-selected-state-text-color: var(--fb-color-white);
+
+  --mdc-protected-button-label-text-color: var(--fb-color-white);
+  --mdc-protected-button-container-color: var(--fb-color-green-1);
+}
+
+.mat-ripple-element {
+  background-color: var(--fb-color-green-1-light);
+}
