style(date-bar): font & bg-colors

--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -37,9 +37,8 @@ $futbet-theme: mat.define-light-theme(
 // that you are using.
 @include mat.all-component-themes($futbet-theme);
 
-button.mdc-button {
-  --mdc-protected-button-label-text-color: var(--fb-color-white);
-  --mdc-protected-button-container-color: var(--fb-color-green-1);
+mat-button-toggle {
+  --mat-standard-button-toggle-state-layer-color: var(--fb-color-green-1);
 }
 
 .mat-ripple-element {
