style(content): max-width for modules (2)

--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -25,4 +25,5 @@
   --fb-size-button-border-width: 2px;
   --fb-size-button-shadow: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.6));
   --fb-size-league-select-height: 32px;
+  --fb-size-max-width: 1000px;
 }
