--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -26,4 +26,5 @@
   --fb-size-button-shadow: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.6));
   --fb-size-league-select-height: 32px;
   --fb-size-max-width: 1000px;
+  --fb-size-border-radius: 0px;
 }
