fix(nx): workspace & update angular to v18

--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -11,17 +11,17 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$futbet-primary: mat.define-palette(mat.$green-palette, 800, 300, 900);
-$futbet-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$futbet-primary: mat.m2-define-palette(mat.$m2-green-palette, 800, 300, 900);
+$futbet-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$futbet-warn: mat.define-palette(mat.$red-palette);
+$futbet-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
-$my-typography: mat.define-typography-config();
+$my-typography: mat.m2-define-typography-config();
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$futbet-theme: mat.define-light-theme(
+$futbet-theme: mat.m2-define-light-theme(
   (
     color: (
       primary: $futbet-primary,
