build(styles): set var fb-green-1-light to alpha 1

--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -5,7 +5,7 @@
   --fb-color-white: #eee;
   --fb-color-green-1: #2e7d32;
   --fb-color-green-2: #2c7051;
-  --fb-color-green-1-light: #2e7d320c;
+  --fb-color-green-1-light: #f9fff9;
   --fb-color-text-1: #353841;
   --fb-color-text-2: #00000061;
   --fb-color-win: rgba(0, 255, 0, 0.15);
