--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -6,6 +6,7 @@
   --fb-color-green-1: #2e7d32;
   --fb-color-green-2: #2c7051;
   --fb-color-green-1-light: #f9fff9;
+  --fb-color-green-1-bg-light: #2e7d3212;
   --fb-color-text-1: #353841;
   --fb-color-text-2: #00000061;
   --fb-color-win: rgba(0, 255, 0, 0.15);
