--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -46,6 +46,8 @@ $futbet-theme: mat.m2-define-light-theme(
   --mat-outlined-button-pressed-state-layer-opacity: 0;
   --mat-outlined-button-hover-state-layer-opacity: 0;
   --mat-outlined-button-focus-state-layer-opacity: 0;
+  --mdc-filled-text-field-container-color: transparent;
+  --mat-form-field-state-layer-color: var(--fb-color-green-1);
 }
 
 mat-button-toggle {
