--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -48,8 +48,14 @@ $futbet-theme: mat.m2-define-light-theme(
   --mat-outlined-button-focus-state-layer-opacity: 0;
   --mdc-filled-text-field-container-color: transparent;
   --mat-form-field-state-layer-color: var(--fb-color-green-1);
+  --mat-datepicker-calendar-container-shape: var(--fb-size-border-radius);
+  --mat-datepicker-calendar-container-elevation-shadow: none;
 }
 
 mat-button-toggle {
   --mat-standard-button-toggle-state-layer-color: var(--fb-color-green-1);
+}
+
+.mat-datepicker-content {
+  border: 1px solid var(--mat-standard-button-toggle-divider-color);
 }
