style(root): color-text-2 with alpha 1

--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -8,7 +8,7 @@
   --fb-color-green-1-light: #f9fff9;
   --fb-color-green-1-bg-light: #2e7d3212;
   --fb-color-text-1: #353841;
-  --fb-color-text-2: #00000061;
+  --fb-color-text-2: #b4b4b4;
   --fb-color-win: rgba(0, 255, 0, 0.15);
   --fb-color-lose: rgba(255, 0, 0, 0.1);
 
