--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -3,6 +3,7 @@
   --fb-color-black-1: #000;
   --fb-color-black-2: #111;
   --fb-color-white: #eee;
+  --fb-color-white-2: #ddd;
   --fb-color-green-1: #2e7d32;
   --fb-color-green-2: #2c7051;
   --fb-color-green-1-light: #f9fff9;
@@ -11,6 +12,7 @@
   --fb-color-text-2: #b4b4b4;
   --fb-color-win: rgba(0, 255, 0, 0.15);
   --fb-color-lose: rgba(255, 0, 0, 0.1);
+  --fb-color-bg-black: #222;
 
   /* Font-sizes */
   --fb-font-size-title: 28px;
