--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -11,13 +11,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$reelscore-primary: mat.m2-define-palette(mat.$m2-green-palette, 800, 300, 900);
-$reelscore-accent: mat.m2-define-palette(
-  mat.$m2-pink-palette,
-  A200,
-  A100,
-  A400
-);
+$reelscore-primary: mat.m2-define-palette(mat.$m2-grey-palette, 800, 300, 900);
+$reelscore-accent: mat.m2-define-palette(mat.$m2-green-palette, 800, 300, 900);
 
 // The warn palette is optional (defaults to red).
 $reelscore-warn: mat.m2-define-palette(mat.$m2-red-palette);
