style: fix mat-option-group padding (2)

--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -76,6 +76,6 @@ button.mdc-button {
   @apply text-fb-font-size-small text-fb-color-text-2;
 }
 
-.mat-mdc-optgroup .mat-mdc-option:not(.mat-mdc-option-multiple) {
+div.mat-mdc-optgroup .mat-mdc-option:not(.mat-mdc-option-multiple) {
   padding-left: 0;
 }
