--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -76,7 +76,6 @@ button.mdc-button {
   @apply text-fb-font-size-small text-fb-color-text-2;
 }
 
-mat-option-group.mat-mdc-optgroup
-  .mat-mdc-option:not(.mat-mdc-option-multiple) {
+mat-optgroup.mat-mdc-optgroup .mat-mdc-option:not(.mat-mdc-option-multiple) {
   padding-left: 0;
 }
