--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -79,3 +79,16 @@ button.mdc-button {
 mat-optgroup.mat-mdc-optgroup .mat-mdc-option:not(.mat-mdc-option-multiple) {
   padding-left: 0;
 }
+
+.mat-mdc-tab-group,
+.mat-mdc-tab-nav-bar {
+  --mat-tab-header-inactive-label-text-color: var(--fb-color-text-2);
+  --mat-tab-header-active-label-text-color: #fff;
+  --mat-tab-header-inactive-ripple-color: var(--fb-color-text-2);
+  --mat-tab-header-active-ripple-color: var(--fb-color-text-2);
+  --mat-tab-header-active-focus-label-text-color: white;
+  --mat-tab-header-inactive-hover-label-text-color: white;
+  --mat-tab-header-active-hover-label-text-color: white;
+  --mat-tab-header-active-focus-indicator-color: white;
+  --mat-tab-header-pagination-icon-color: white;
+}
