--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -91,8 +91,12 @@ mat-optgroup.mat-mdc-optgroup .mat-mdc-option:not(.mat-mdc-option-multiple) {
   --mat-tab-header-active-hover-label-text-color: white;
   --mat-tab-header-active-focus-indicator-color: white;
   --mat-tab-header-pagination-icon-color: white;
-}
 
-.mat-mdc-tab-header {
-  --mat-tab-header-label-text-size: var(--fb-font-size-body-2);
+  .mat-mdc-tab-header {
+    --mat-tab-header-label-text-size: var(--fb-font-size-body-2);
+  }
+
+  .mat-mdc-tab-label-container {
+    overflow: scroll;
+  }
 }
