feat(responsive): mat tab label as icon in mobile (2)

--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -95,4 +95,8 @@ mat-optgroup.mat-mdc-optgroup .mat-mdc-option:not(.mat-mdc-option-multiple) {
   .mat-mdc-tab-header {
     --mat-tab-header-label-text-size: var(--fb-font-size-body-2);
   }
+
+  .mat-mdc-tab {
+    @apply min-w-[50px] px-1;
+  }
 }
