--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -82,18 +82,21 @@ mat-optgroup.mat-mdc-optgroup .mat-mdc-option:not(.mat-mdc-option-multiple) {
 
 .mat-mdc-tab-group,
 .mat-mdc-tab-nav-bar {
-  --mat-tab-header-inactive-label-text-color: var(--fb-color-text-2);
-  --mat-tab-header-active-label-text-color: #fff;
   --mat-tab-header-inactive-ripple-color: var(--fb-color-text-2);
   --mat-tab-header-active-ripple-color: var(--fb-color-text-2);
-  --mat-tab-header-active-focus-label-text-color: white;
-  --mat-tab-header-inactive-hover-label-text-color: white;
-  --mat-tab-header-active-hover-label-text-color: white;
-  --mat-tab-header-active-focus-indicator-color: white;
-  --mat-tab-header-pagination-icon-color: white;
+
+  --mdc-tab-indicator-active-indicator-color: var(--fb-color-text-1);
+  --mat-tab-header-active-focus-indicator-color: var(--fb-color-text-1);
+
+  --mat-tab-header-active-label-text-color: var(--fb-color-text-1);
+  --mat-tab-header-inactive-label-text-color: var(--fb-color-text-2);
+
+  // --mat-tab-header-active-hover-label-text-color: var(--fb-color-black-2);
+  // --mat-tab-header-active-focus-label-text-color: var(--fb-color-black-2);
 
   .mat-mdc-tab-header {
     --mat-tab-header-label-text-size: var(--fb-font-size-body-2);
+    background-color: #fff;
   }
 
   .mat-mdc-tab {
