--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -99,7 +99,7 @@ mat-optgroup.mat-mdc-optgroup .mat-mdc-option:not(.mat-mdc-option-multiple) {
 
   .mat-mdc-tab-header {
     --mat-tab-header-label-text-size: var(--fb-font-size-body-2);
-    background-color: #fff;
+    @apply border-b-[1px] bg-white;
   }
 
   .mat-mdc-tab {
