--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -4,12 +4,13 @@
   --fb-color-black-2: #111;
   --fb-color-white: #eee;
   --fb-color-white-2: #f7f7f7;
+  --fb-color-red: #d10313;
   --fb-color-green-1: #2e7d32;
   --fb-color-green-2: #2c7051;
   --fb-color-green-1-light: #f9fff9;
   --fb-color-green-1-bg-light: #2e7d3212;
-  --fb-color-text-1: #353841;
-  --fb-color-text-2: #b4b4b4;
+  --fb-color-text-1: #1d1d1f;
+  --fb-color-text-2: #999999;
   --fb-color-win: rgba(21, 103, 21, 0.15);
   --fb-color-lose: rgba(255, 0, 0, 0.1);
   --fb-color-bg-black: #111;
