--- a/apps/client/src/styles/styles.scss
+++ b/apps/client/src/styles/styles.scss
@@ -18,7 +18,7 @@ body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
-main,
+main > *,
 header .wrapper {
   max-width: var(--fb-size-max-width);
   margin: auto;
