--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -30,6 +30,7 @@
   /* Sizes */
   --fb-size-button-border-width: 2px;
   --fb-size-button-shadow: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.6));
+  --fb-size-box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   --fb-size-league-select-height: 32px;
   --fb-size-max-width: 1000px;
   --fb-size-border-radius: 0px;
