--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -15,6 +15,9 @@
   --fb-color-lose: rgba(255, 0, 0, 0.1);
   --fb-color-bg-black: #111;
 
+  --fb-button-text-color: var(--fb-color-white);
+  --fb-button-bg-color: var(--fb-color-red);
+
   /* Font-sizes */
   --fb-font-size-title: 24px;
   --fb-font-size-subtitle-1: 18px;
