stylefix(root): white css variable

--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -2,7 +2,7 @@
   /* Colors */
   --fb-color-black-1: #000;
   --fb-color-black-2: #111;
-  --fb-color-white: #eee;
+  --fb-color-white: #fff;
   --fb-color-white-2: #f7f7f7;
   --fb-color-red: #d10313;
   --fb-color-green-1: #2e7d32;
