--- a/apps/client/src/styles/material.scss
+++ b/apps/client/src/styles/material.scss
@@ -64,6 +64,7 @@ $reelscore-theme: mat.m2-define-light-theme(
   --mdc-text-button-label-text-color: var(--fb-button-text-color);
   --mdc-icon-button-icon-color: var(--fb-button-text-color);
   --mdc-outlined-button-label-text-color: var(--fb-button-text-color);
+  --mat-standard-button-toggle-state-layer-color: var(--fb-color-red);
 }
 
 button.mdc-button {
@@ -103,11 +104,13 @@ mat-optgroup.mat-mdc-optgroup .mat-mdc-option:not(.mat-mdc-option-multiple) {
   --mdc-tab-indicator-active-indicator-color: var(--fb-color-red);
   --mat-tab-header-active-focus-indicator-color: var(--fb-color-red);
 
-  --mat-tab-header-active-label-text-color: var(--fb-color-text-2);
+  --mat-tab-header-active-label-text-color: var(--fb-color-red);
   --mat-tab-header-inactive-label-text-color: var(--fb-color-text-2);
 
-  // --mat-tab-header-active-hover-label-text-color: var(--fb-color-black-2);
-  // --mat-tab-header-active-focus-label-text-color: var(--fb-color-black-2);
+  --mat-tab-header-active-hover-indicator-color: var(--fb-color-red);
+
+  --mat-tab-header-active-hover-label-text-color: var(--fb-color-red);
+  --mat-tab-header-active-focus-label-text-color: var(--fb-color-red);
 
   .mat-mdc-tab-header {
     --mat-tab-header-label-text-size: var(--fb-font-size-body-2);
