--- a/apps/client/src/styles/styles.scss
+++ b/apps/client/src/styles/styles.scss
@@ -16,6 +16,7 @@ body {
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
+  background-color: var(--fb-color-red);
 }
 
 main > *,
@@ -26,9 +27,9 @@ header .wrapper {
 
 h3.match-section-title {
   // TODO refactor border-b-[1px] pb-2 mb-2 to a utility class
-  @apply py-3 mx-5 border-b-[1px] text-center text-fb-color-text-1;
+  @apply py-3 mx-5 border-b-[1px] text-center text-fb-color-text-3 tracking-widest;
 }
 
 p.no-data {
-  @apply text-fb-font-size-body-1 text-fb-color-text-2 text-center py-10;
+  @apply text-fb-font-size-body-1 text-fb-color-text-3 text-center py-10;
 }
