style(theme): change theme color to orange (2)

--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -16,7 +16,7 @@
   --fb-color-lose: rgba(255, 0, 0, 0.1);
   --fb-color-bg-black: #111;
 
-  --fb-button-text-color: var(--fb-color-red);
+  --fb-button-text-color: var(--fb-color-text-1);
   --fb-button-bg-color: var(--fb-color-white);
 
   /* Font-sizes */
