--- a/apps/client/src/styles/styles.scss
+++ b/apps/client/src/styles/styles.scss
@@ -1,13 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@use 'root.scss';
+@use 'material.scss';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import 'root.scss';
-@import 'material.scss';
 
 html,
 body {
