--- a/apps/client/src/styles/styles.scss
+++ b/apps/client/src/styles/styles.scss
@@ -29,3 +29,34 @@ h3.match-section-title {
 p.no-data {
   @apply text-fb-font-size-body-1 text-fb-color-text-3 text-center py-10;
 }
+
+.animate-fade-in {
+  animation-duration: 0.2s;
+  animation-name: animate-fade-in;
+  animation-fill-mode: backwards;
+}
+
+@keyframes animate-fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.animate-drop-from-top {
+  animation-duration: 0.3s;
+  animation-timing-function: ease-out;
+  animation-name: animate-drop-from-top;
+  animation-fill-mode: backwards;
+}
+
+@keyframes animate-drop-from-top {
+  0% {
+    transform: translateY(-80px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
