--- a/apps/client/src/styles/root.scss
+++ b/apps/client/src/styles/root.scss
@@ -16,6 +16,8 @@
   --fb-color-lose: rgba(255, 0, 0, 0.1);
   --fb-color-bg-black: #111;
 
+  --fb-background-color: #1c1c1c;
+
   --fb-button-text-color: var(--fb-color-text-1);
   --fb-button-bg-color: var(--fb-color-white);
 
