--- a/apps/client/src/styles/styles.scss
+++ b/apps/client/src/styles/styles.scss
@@ -12,7 +12,7 @@ body {
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
-  background-color: var(--fb-color-red);
+  background-color: var(--fb-background-color);
 }
 
 main > *,
